[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/save_load.gd" id="1"]

[node name="SaveLoad" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.121569, 0.145098, 0.172549, 1)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
offset_left = 320.0
offset_top = 100.0
offset_right = 960.0
offset_bottom = 620.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ModeLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "ロード"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = ""
autowrap_mode = 3

[node name="SlotContainer" type="VBoxContainer" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="BackButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "戻る"

[connection signal="pressed" from="Panel/VBox/BackButton" to="." method="_on_back_button_pressed"]
